data index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ h1 {
 
         <div class="d-flex justify-content-between align-items-center text-primary">
             <p>CO<sub>2</sub></p>
-            <h1 id="co2-value" class="text-center"></h1>
+            <h1 id="co2-value" class="text-center">1904</h1>
             <p>ppm</p>
         </div>
 
